# quaero

./: .claude_settings.json  .dockerignore  .gitignore  .version  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  WARP.md  config.toml.example  config.yaml.example  go.mod  go.sum  implementation_plan.md  instructions.md  job_rerun_test_output.txt  package-lock.json  quaero_monorepo_spec.md  temp_jobs.html  test_run_output.txt
.3agents/: progress.json
.claude/: README.md  go-function-index.json  settings.json  settings.json.minimax  settings.local copy.json  settings.local.json  settings.local.json.backup  settings.local.json.bak
.claude.bak/: settings.json  settings.local.json
.codebuff/: README.md
.codex/: INSTRUCTIONS.md
.kilocode/: mcp.json
deployments/: config.offline.example.toml
doc/: TEST_ARCHITECTURE.md
docs/: AGENT_IMPLEMENTATION_STATUS.md  CRASH_FIX_VERIFICATION.md  DATABASE_ANALYSIS.md  DATABASE_RECOMMENDATION_FINAL.md  EMBEDDING_REMOVAL_PLAN.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_TESTING.md  POINTER_RAG_DESIGN.md  REFACTOR_PLAN.md  SCRAPER_REFACTOR.MD  SQLITE_IMPLEMENTATION_SUMMARY.md  SQLITE_MIGRATION_COMPLETE.md  TODO.md  agent-zero-analysis.md  architecture.md  chat-service.md  common.css  dependency-injection.md  implement-seed-url-generation-from-source-configuration-0.md  refactor.md  (+30 more)
test/fixtures/cpp_project/: CMakeLists.txt  Makefile
test/fixtures/cpp_project/include/: utils.h
test/fixtures/cpp_project/src/: config.h  main.cpp  platform_linux.cpp  platform_win.cpp  utils.cpp
test/fixtures/cpp_project/tests/: test_main.cpp
(+3951 files in other folders)
